[tool.poetry]
name = "AlphaDev"
version = "0.0.3"
description = "AlphaDev - Pytorch"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "MIT"
readme = "README.md"  # assuming you have a README.md file
homepage = "https://github.com/kyegomez/AlphaDev"
keywords = ["artificial intelligence", "attention mechanism", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
]
packages = [
    { include = "alpha_dev" },
    { include = "alpha_dev/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.6"
torch = "*"
lion-pytorch = "*"
numpy = "*"
einops = "*"
accelerate = "*"
transformers = "*"
SentencePiece = "*"
datasets = "*"
matplotlib = "*"
deepspeed = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

